--- a/wiki/fr/TechDraw_ExtensionPositionSectionView.html
+++ b/wiki/fr/TechDraw_ExtensionPositionSectionView.html
@@ -60,13 +60,11 @@
 <p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionViewExample.png&amp;filetimestamp=20211114132209&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionViewExample.png" decoding="async" width="400" height="151" class="mw-file-element" data-file-width="702" data-file-height="265"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, la vue de section align&eacute;e</p>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une vue en coupe.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionView.svg&amp;filetimestamp=20240707203614&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Positionner une vue en coupe</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionView.svg&amp;filetimestamp=20240707203614&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Positionner une vue en coupe</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionView.svg&amp;filetimestamp=20240707203614&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Positionner une vue en coupe</b> du menu.</li></ul></li>
 <li>La vue en coupe est align&eacute;e avec sa vue source.</li></ol>
-</div>
 <p><span id="Usage_-_edge_and_vertex_selection"></span>
 </p>
 <h2><span id="Utilisation_-_s.C3.A9lection_d.27un_sommet_et_d.27une_ar.C3.AAte"></span><span class="mw-headline" id="Utilisation_-_s&eacute;lection_d'un_sommet_et_d'une_ar&ecirc;te">Utilisation - s&eacute;lection d'un sommet et d'une ar&ecirc;te</span></h2>
@@ -128,15 +126,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125094835
+Cached time: 20260125094905
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.122 seconds
-Preprocessor visited node count: 382/1000000
-Post&#8208;expand include size: 27207/2097152 bytes
-Template argument size: 10461/2097152 bytes
+CPU time usage: 0.076 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 381/1000000
+Post&#8208;expand include size: 27194/2097152 bytes
+Template argument size: 10448/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -144,19 +142,19 @@ Unstrip post&#8208;expand size: 1642/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.934      1 -total
- 26.75%    7.739      1 Template:TechDraw_Tools_navi/fr
- 18.90%    5.467      2 Template:Navigation_menu_2
- 16.61%    4.807      1 Template:Userdocnavi/fr
- 11.30%    3.269      1 Template:Version/fr
-  9.69%    2.804      1 Template:GuiCommand/fr
-  8.88%    2.569      2 Template:Caption
-  8.55%    2.474      2 Template:Docnav/fr
-  7.90%    2.287      2 Template:MenuCommand
-  6.81%    1.969      2 Template:Button
+100.00%   25.199      1 -total
+ 24.72%    6.230      1 Template:TechDraw_Tools_navi/fr
+ 19.27%    4.856      2 Template:Navigation_menu_2
+ 15.26%    3.845      1 Template:Userdocnavi/fr
+ 12.67%    3.192      2 Template:Docnav/fr
+ 12.38%    3.119      1 Template:GuiCommand/fr
+ 11.64%    2.933      1 Template:Version/fr
+  8.49%    2.138      2 Template:Caption
+  6.50%    1.639      2 Template:MenuCommand
+  5.35%    1.348      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277579-0!canonical and timestamp 20260125094835 and revision id 1743514. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277579-0!canonical and timestamp 20260125094905 and revision id 1743516. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
