--- a/wiki/fr/TechDraw_ExtensionPositionSectionView.html
+++ b/wiki/fr/TechDraw_ExtensionPositionSectionView.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionPositionSectionView/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionPositionSectionView&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionPositionSectionView.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungSchnittAusrichten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionPositionSectionView.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionPositionSectionView (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionPositionSectionView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Allinea Vista sezione (75% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionPositionSectionView.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Wyr&oacute;wnaj widok przekroju (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionPositionSectionView.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw ExtensionPositionSectionView
@@ -71,14 +71,12 @@
 <p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionViewExample2.png&amp;filetimestamp=20231221152846&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionViewExample2.png" decoding="async" width="400" height="172" class="mw-file-element" data-file-width="737" data-file-height="316"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, la vue de la section align&eacute;e</p>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ar&ecirc;te (1) dans une vue en coupe. L'ar&ecirc;te doit correspondre &agrave; la direction de la projection.</li>
 <li>S&eacute;lectionnez le sommet correspondant (2) dans la vue originale.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyer sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionView.svg&amp;filetimestamp=20240707203614&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Positionner une vue en coupe</a></span>.</li>
-<li>S&eacute;lectionner l'option <b>TechDraw &rarr; Extensions&nbsp;: Attributs/Modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionView.svg&amp;filetimestamp=20240707203614&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Positionner une vue en coupe</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionner l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPositionSectionView.svg&amp;filetimestamp=20240707203614&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPositionSectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Positionner une vue en coupe</b> du menu.</li></ul></li>
 <li>La vue en coupe est align&eacute;e avec sa vue source.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -126,35 +124,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125094905
+Cached time: 20260125094935
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.111 seconds
-Preprocessor visited node count: 381/1000000
-Post&#8208;expand include size: 27194/2097152 bytes
-Template argument size: 10448/2097152 bytes
+CPU time usage: 0.089 seconds
+Real time usage: 0.133 seconds
+Preprocessor visited node count: 380/1000000
+Post&#8208;expand include size: 27181/2097152 bytes
+Template argument size: 10435/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1642/5000000 bytes
+Unstrip post&#8208;expand size: 1646/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.199      1 -total
- 24.72%    6.230      1 Template:TechDraw_Tools_navi/fr
- 19.27%    4.856      2 Template:Navigation_menu_2
- 15.26%    3.845      1 Template:Userdocnavi/fr
- 12.67%    3.192      2 Template:Docnav/fr
- 12.38%    3.119      1 Template:GuiCommand/fr
- 11.64%    2.933      1 Template:Version/fr
-  8.49%    2.138      2 Template:Caption
-  6.50%    1.639      2 Template:MenuCommand
-  5.35%    1.348      2 Template:Button
+100.00%   26.634      1 -total
+ 29.87%    7.955      1 Template:TechDraw_Tools_navi/fr
+ 18.32%    4.879      2 Template:Navigation_menu_2
+ 17.05%    4.541      1 Template:Userdocnavi/fr
+ 13.04%    3.473      1 Template:GuiCommand/fr
+ 11.33%    3.018      2 Template:Docnav/fr
+  8.12%    2.164      1 Template:Version/fr
+  7.96%    2.120      2 Template:Caption
+  4.85%    1.291      2 Template:Button
+  4.52%    1.204      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277579-0!canonical and timestamp 20260125094905 and revision id 1743516. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277579-0!canonical and timestamp 20260125094935 and revision id 1743518. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
