--- a/wiki/fr/TechDraw_ExtensionPosHorizChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionPosHorizChainDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionPosHorizChainDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionPosHorizChainDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionPosHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHorizontaleKettenma&szlig;eAnordnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionPosHorizChainDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionPosHorizChainDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionPosHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Allinea in Serie Quote Orizzontali (82% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionPosHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie U&#322;&oacute;&#380; poziom&#261; seri&#281; wymiar&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -58,14 +58,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez deux cotes horizontales ou plus.</li>
 <li>La premi&egrave;re cote d&eacute;finit la position. Cette cote ne sera pas d&eacute;plac&eacute;e.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosHorizChainDimension.svg&amp;filetimestamp=20240707203137&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Aligner horizontalement les cotes</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosHorizChainDimension.svg&amp;filetimestamp=20240707203137&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Aligner horizontalement les cotes</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosHorizChainDimension.svg&amp;filetimestamp=20240707203137&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Aligner horizontalement les cotes</b> du menu.</li></ul></li>
 <li>Les cotes sont align&eacute;es et leurs textes sont centr&eacute;s.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -117,34 +115,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125095123
+Cached time: 20260125095209
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.128 seconds
-Preprocessor visited node count: 355/1000000
-Post&#8208;expand include size: 26192/2097152 bytes
-Template argument size: 10527/2097152 bytes
+CPU time usage: 0.086 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 354/1000000
+Post&#8208;expand include size: 26179/2097152 bytes
+Template argument size: 10514/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1416/5000000 bytes
+Unstrip post&#8208;expand size: 1420/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.351      1 -total
- 31.94%   11.612      1 Template:TechDraw_Tools_navi/fr
- 21.33%    7.754      2 Template:Navigation_menu_2
- 17.61%    6.401      1 Template:Userdocnavi/fr
- 12.45%    4.526      1 Template:GuiCommand/fr
- 10.36%    3.767      2 Template:Docnav/fr
-  9.51%    3.456      1 Template:Caption
-  7.32%    2.660      1 Template:MenuCommand
-  7.12%    2.590      1 Template:Button
+100.00%   24.939      1 -total
+ 30.68%    7.651      1 Template:TechDraw_Tools_navi/fr
+ 25.49%    6.356      2 Template:Navigation_menu_2
+ 19.23%    4.796      1 Template:Userdocnavi/fr
+ 13.54%    3.377      1 Template:GuiCommand/fr
+ 13.29%    3.315      2 Template:Docnav/fr
+  7.42%    1.851      1 Template:MenuCommand
+  6.53%    1.628      1 Template:Caption
+  6.36%    1.585      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277589-0!canonical and timestamp 20260125095123 and revision id 1743520. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277589-0!canonical and timestamp 20260125095209 and revision id 1743522. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
