--- a/wiki/fr/TechDraw_ExtensionPosVertChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionPosVertChainDimension.html
@@ -54,7 +54,7 @@
 <p>L'outil <b>TechDraw Aligner verticalement</b> aligne les cotes verticales pour cr&eacute;er une cha&icirc;ne de cotes.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosVertChainDimensionExample.png&amp;filetimestamp=20211113142753&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosVertChainDimensionExample.png" decoding="async" width="400" height="224" class="mw-file-element" data-file-width="855" data-file-height="478"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes align&eacute;es</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes align&eacute;es</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -117,15 +117,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125095355
+Cached time: 20260125095404
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.088 seconds
+CPU time usage: 0.071 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 355/1000000
-Post&#8208;expand include size: 26209/2097152 bytes
-Template argument size: 10536/2097152 bytes
+Post&#8208;expand include size: 26211/2097152 bytes
+Template argument size: 10537/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -133,18 +133,18 @@ Unstrip post&#8208;expand size: 1406/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.620      1 -total
- 35.97%    7.057      1 Template:TechDraw_Tools_navi/fr
- 28.97%    5.684      2 Template:Navigation_menu_2
- 20.11%    3.946      1 Template:Userdocnavi/fr
- 11.17%    2.192      2 Template:Docnav/fr
- 10.38%    2.037      1 Template:MenuCommand
-  9.47%    1.858      1 Template:GuiCommand/fr
-  5.17%    1.015      1 Template:Caption
-  4.79%    0.939      1 Template:Button
+100.00%   24.308      1 -total
+ 30.46%    7.405      1 Template:TechDraw_Tools_navi/fr
+ 19.28%    4.687      2 Template:Navigation_menu_2
+ 16.34%    3.971      2 Template:Docnav/fr
+ 16.08%    3.908      1 Template:Userdocnavi/fr
+ 12.06%    2.932      1 Template:GuiCommand/fr
+  9.45%    2.296      1 Template:Caption
+  7.31%    1.778      1 Template:Button
+  6.05%    1.470      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277601-0!canonical and timestamp 20260125095355 and revision id 1743526. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277601-0!canonical and timestamp 20260125095404 and revision id 1743528. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
