--- a/wiki/Arch_Roof.html
+++ b/wiki/Arch_Roof.html
@@ -58,7 +58,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>The <b>Arch Roof</b> tool allows for the creation of a sloped roof from a selected <a href="Draft_Wire.html" title="Draft Wire">Draft_Wire</a>. The created roof object is parametric, keeping its relationship with the base object. The principle is that each edge is seen allotting a profile of roof (slope, width, overhang, thickness).
+<p>The <b>Arch Roof</b> tool allows for the creation of a sloped roof from a selected wire. The created roof object is parametric, keeping its relationship with the base object. The principle is that each edge is seen allotting a profile of roof (slope, width, overhang, thickness).
 </p><p><b>Note:</b> This tool is still in development, and might fail with very complex shapes. 
 </p><p><span typeof="mw:File"><a href="index.php?title=RoofExample.png&amp;filetimestamp=20141208134123&amp;.html" class="mw-file-description"><img src="File/RoofExample.png" decoding="async" width="600" height="548" class="mw-file-element" data-file-width="647" data-file-height="591"></a></span>
 </p>
@@ -191,13 +191,13 @@ The 3rd image shows the automatically generated subtraction volume.</p>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125095520
+Cached time: 20260125095605
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.145 seconds
-Preprocessor visited node count: 1437/1000000
+CPU time usage: 0.150 seconds
+Real time usage: 0.166 seconds
+Preprocessor visited node count: 1436/1000000
 Post&#8208;expand include size: 33472/2097152 bytes
 Template argument size: 11446/2097152 bytes
 Highest expansion depth: 7/100
@@ -207,19 +207,19 @@ Unstrip post&#8208;expand size: 6415/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.910      1 -total
- 23.38%    6.525     13 Template:PropertyData
- 18.99%    5.300      1 Template:BIM_Tools_navi
- 17.99%    5.022      2 Template:Navigation_menu_2
- 17.95%    5.009     13 Template:Variable
-  9.41%    2.625      1 Template:GuiCommand
-  7.31%    2.040      1 Template:Userdocnavi
-  5.62%    1.570     30 Template:Incode
-  5.60%    1.564      2 Template:Docnav
-  5.37%    1.500      2 Template:Code
+100.00%   34.472      1 -total
+ 26.24%    9.047      1 Template:BIM_Tools_navi
+ 24.02%    8.279      2 Template:Navigation_menu_2
+ 19.60%    6.756     13 Template:PropertyData
+ 15.03%    5.180     13 Template:Variable
+  9.92%    3.421      1 Template:Userdocnavi
+  7.25%    2.499      1 Template:GuiCommand
+  6.79%    2.340      2 Template:Code
+  4.87%    1.678     30 Template:Incode
+  4.62%    1.592      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:3682-0!canonical and timestamp 20260125095523 and revision id 1743531. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:3682-0!canonical and timestamp 20260125095627 and revision id 1743536. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
