"will only switch places if the sign of their value is changed"

--- a/wiki/Sketcher_Workbench.html
+++ b/wiki/Sketcher_Workbench.html
@@ -317,7 +317,7 @@
 </p>
 <h4><span class="mw-headline" id="Use_horizontal_and_vertical_dimensions">Use horizontal and vertical dimensions</span></h4>
 <p><span typeof="mw:File"><a href="index.php?title=Sketcher_Flipping_HorVer_Dimensions.png&amp;filetimestamp=20250805174627&amp;.html" class="mw-file-description"><img src="File/Sketcher_Flipping_HorVer_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
-</p><p>Using <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of <a href="Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a> or <a href="Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">equal constraints</a> can prevent flipping. Points constrained by these dimensions will not switch places. In the image above the added (orange) dimensional constraints are linked to the original dimensions via <a href="Expressions.html" title="Expressions">expressions</a>.
+</p><p>Using <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of <a href="Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a> or <a href="Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">equal constraints</a> can prevent flipping. Points constrained by these dimensions will only switch places if the sign of their value is changed. In the image above the added (orange) dimensional constraints are linked to the original dimensions via <a href="Expressions.html" title="Expressions">expressions</a>.
 </p>
 <h4><span class="mw-headline" id="Use_angle_dimensions">Use angle dimensions</span></h4>
 <p><span typeof="mw:File"><a href="index.php?title=Sketcher_Flipping_Angular_Dimensions.png&amp;filetimestamp=20250805174512&amp;.html" class="mw-file-description"><img src="File/Sketcher_Flipping_Angular_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
@@ -379,12 +379,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122111320
+Cached time: 20260125100014
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.417 seconds
-Real time usage: 0.514 seconds
+CPU time usage: 0.445 seconds
+Real time usage: 0.522 seconds
 Preprocessor visited node count: 1739/1000000
 Post&#8208;expand include size: 33454/2097152 bytes
 Template argument size: 9226/2097152 bytes
@@ -395,19 +395,19 @@ Unstrip post&#8208;expand size: 4787/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.855      1 -total
- 15.99%    6.053      1 Template:Sketcher_Tools_navi
- 14.73%    5.576      2 Template:Navigation_menu_2
- 13.72%    5.192     36 Template:Version
- 10.27%    3.887      5 Template:MenuCommand
-  8.19%    3.100      1 Template:Userdocnavi
-  7.13%    2.699      1 Template:PropertyView
-  6.42%    2.430      2 Template:Docnav
-  5.94%    2.249      6 Template:Caption
-  5.29%    2.004      1 Template:TOCright
+100.00%   28.790      1 -total
+ 24.44%    7.037      1 Template:Sketcher_Tools_navi
+ 18.24%    5.250      2 Template:Navigation_menu_2
+ 10.83%    3.119      1 Template:Userdocnavi
+  9.75%    2.806      1 Template:PropertyView
+  9.03%    2.599     36 Template:Version
+  7.20%    2.072      8 Template:VersionPlus
+  6.69%    1.925      2 Template:Docnav
+  5.37%    1.546      1 Template:Variable
+  5.28%    1.519     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1578-0!canonical and timestamp 20260122111338 and revision id 1742291. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1578-0!canonical and timestamp 20260125100014 and revision id 1743543. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
