Updated page TechDraw ExtensionCreateHorizChainDimension/fr

--- a/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
@@ -15,14 +15,14 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cotes horizontales
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Chaine horizontale de cotes
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Chaine de cotes horizontales
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Chaine horizontale de cotes
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -113,15 +113,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125101327
+Cached time: 20260125101346
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.136 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.151 seconds
 Preprocessor visited node count: 378/1000000
-Post&#8208;expand include size: 26868/2097152 bytes
-Template argument size: 10691/2097152 bytes
+Post&#8208;expand include size: 26884/2097152 bytes
+Template argument size: 10707/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -129,19 +129,19 @@ Unstrip post&#8208;expand size: 1612/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.130      1 -total
- 17.52%    6.856      1 Template:TechDraw_Tools_navi/fr
- 13.95%    5.459      1 Template:Value
- 11.55%    4.521      2 Template:Navigation_menu_2
- 11.24%    4.398      1 Template:GuiCommand/fr
- 10.71%    4.189      1 Template:Userdocnavi/fr
-  8.78%    3.435      2 Template:Docnav/fr
-  7.49%    2.929      3 Template:MenuCommand
-  7.19%    2.814      1 Template:Caption
-  7.07%    2.767      1 Template:Version/fr
+100.00%   52.530      1 -total
+ 37.22%   19.553      1 Template:Value
+ 32.06%   16.842      1 Template:Incode
+ 14.65%    7.694      1 Template:TechDraw_Tools_navi/fr
+ 10.82%    5.685      2 Template:Navigation_menu_2
+  8.13%    4.272      1 Template:Userdocnavi/fr
+  7.21%    3.787      2 Template:Docnav/fr
+  5.93%    3.116      1 Template:GuiCommand/fr
+  5.41%    2.843      2 Template:Button
+  5.37%    2.820      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260125101327 and revision id 1743551. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260125101346 and revision id 1743565. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
