Updated page TechDraw ExtensionCreateVertChainDimension/fr

--- a/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
@@ -5,8 +5,8 @@
 <li><a href="../it/TechDraw_ExtensionCreateVertChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quote in Serie Verticale (67% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCreateVertChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Seria wymiar&oacute;w pionowo (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">Cotes horizontales</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/fr">Cotes inclin&eacute;es</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">Chaine horizontale de cotes</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/fr">Chaine inclin&eacute;e de cotes</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -68,8 +68,8 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">Cotes horizontales</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/fr">Cotes inclin&eacute;es</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">Chaine horizontale de cotes</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/fr">Chaine inclin&eacute;e de cotes</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -112,15 +112,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125101216
+Cached time: 20260125101949
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.117 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.147 seconds
 Preprocessor visited node count: 378/1000000
-Post&#8208;expand include size: 26968/2097152 bytes
-Template argument size: 10754/2097152 bytes
+Post&#8208;expand include size: 27076/2097152 bytes
+Template argument size: 10826/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -128,19 +128,19 @@ Unstrip post&#8208;expand size: 1399/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.176      1 -total
- 25.90%    6.779      1 Template:TechDraw_Tools_navi/fr
- 19.86%    5.199      2 Template:Navigation_menu_2
- 13.73%    3.593      1 Template:Userdocnavi/fr
- 10.10%    2.645      2 Template:Docnav/fr
-  9.40%    2.460      1 Template:GuiCommand/fr
-  9.06%    2.371      1 Template:Value
-  6.77%    1.772      1 Template:Version/fr
-  6.76%    1.770      1 Template:VersionMinus/fr
-  5.81%    1.521      1 Template:Caption
+100.00%   40.028      1 -total
+ 29.90%   11.967      1 Template:TechDraw_Tools_navi/fr
+ 19.46%    7.789      2 Template:Navigation_menu_2
+ 11.17%    4.470      1 Template:Userdocnavi/fr
+  9.45%    3.783      2 Template:Button
+  8.71%    3.488      1 Template:VersionMinus/fr
+  7.65%    3.061      1 Template:Version/fr
+  7.54%    3.017      1 Template:Value
+  7.03%    2.814      1 Template:GuiCommand/fr
+  6.23%    2.493      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125101216 and revision id 1743562. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125101948 and revision id 1743580. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
